# secheaders

./: .gitignore  CONTRIBUTING.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/secheaders/: __init__.py  __main__.py  analyzer.py  batch.py  cli.py  constants.py  exceptions.py  exporters.py  formatter.py  scanner.py  scorer.py
tests/: test_analyzer.py  test_batch.py  test_cli.py  test_exporters.py  test_formatter.py  test_scanner.py  test_scorer.py
