[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secheaders"
version = "0.1.0"
description = "Scan URLs for HTTP security headers, score them, and get fix recommendations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pablo", email = "pabloncf@gmail.com" }]
keywords = ["security", "http", "headers", "scanner", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "httpx==0.27.2",
    "rich==13.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "respx==0.21.1",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "build==1.2.2.post1",
]

[project.scripts]
secheaders = "secheaders.cli:main"

[project.urls]
Homepage = "https://github.com/pabloncf/secheaders"
Repository = "https://github.com/pabloncf/secheaders"

[tool.hatch.build.targets.wheel]
packages = ["src/secheaders"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=secheaders --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
